SFDC DevOps Test/src/objects/PMO_TaskAssignment__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This custom setting confirms whether the child task should be automatically created or not for a task in the trigger PMO_Task</description>
    <fields>
        <fullName>Owner_Queue__c</fullName>
        <description>It stores the ID of the user to which the new task would be assigned</description>
        <label>Owner/Queue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preceding_Task__c</fullName>
        <description>It stores the preceding task of the current task.</description>
        <label>Preceding Task</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <description>It stores the task name.</description>
        <label>Task</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>PMO_TaskAssignment</label>
</CustomObject>